--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <nav>
             <ul class="lista-links">
                 <li>
-                    <a href="#" class="link-destaque"></a>
+                    <a href="#" class="link-destaque">
+                        publicar
+                    </a>
                 </li>
                 <li>
                     <a href="#">
