--- a/index.html
+++ b/index.html
@@ -50,6 +50,47 @@
             </ul>
         </nav>
     </aside>
+
+    <main>
+        <div class="container-upload-imagem">
+            <div class="container-imagem">
+                <img src="img/imagem1.png" alt="" class="main-imagem">
+            </div>
+            <button>Carregar imagem</button>
+            <div class="container-imagem-nome">
+                <p>image_projeto.png</p>
+                <img src="img/close.svg" alt="">
+            </div>
+        </div>
+        <div class="container-descricao">
+            <h2>Novo projeto</h2>
+            <form>
+                <div>
+                    <label for="nome">Nome do projeto</label>
+                    <input type="text" id="nome" name="nome">
+                </div>
+
+                <div>
+                    <label for="nome">Descrição</label>
+                    <textarea name="descricao" id="descricao"></textarea>
+                </div>
+
+                <div>
+                    <label for="nome">Tags</label>
+                    <input type="text" id="categoria" name="categoria">
+                </div>
+
+                <ul class="lista-tags">
+                    <li>
+                        <p>Front-end</p>
+                        <img src="img/close-black.svg" alt="">
+                    </li>
+                </ul>
+
+                
+            </form>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 
