--- a/index.html
+++ b/index.html
@@ -86,7 +86,10 @@
                         <img src="img/close-black.svg" alt="">
                     </li>
                 </ul>
-
+                <div class="container-botoes">
+                    <button class="botao-descartar">Descartar</button>
+                    <button class="botao-publicar">Publicar</button>
+                </div>
                 
             </form>
         </div>
