Atualizando o ID do input

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                 <div>
                     <label for="nome">Tags</label>
-                    <input type="text" id="categoria" name="categoria">
+                    <input type="text" name="categoria" id="input-tags">
                 </div>
 
                 <ul class="lista-tags">
